@startuml

title __NETWORK's Class Diagram__\n

  namespace com.blackhearth.securevoipclient {
    namespace client {
      namespace network {
        class com.blackhearth.securevoipclient.client.network.ClientListen {
            {static} ~ LISTEN_CLIENT_PORT : int
            + ClientListen()
            + run()
        }
      }
    }
  }
  

  namespace com.blackhearth.securevoipclient {
    namespace client {
      namespace network {
        class com.blackhearth.securevoipclient.client.network.ClientSender {
            {static} - SENDER_CLIENT_PORT : int
            + put()
            - sendMessageIfNotNull()
        }
      }
    }
  }
  

  namespace com.blackhearth.securevoipclient {
    namespace client {
      namespace network {
        class com.blackhearth.securevoipclient.client.network.DataInterpreter {
            - callingUsers : List<Pair<String, String>>
            - chatThread : Thread
            - waitingUsers : List<Button>
            + DataInterpreter()
            ~ proceed()
            - acceptKey()
            - addCallingUser()
            - beginChat()
            - tradeKeys()
        }
      }
    }
  }
  

  namespace com.blackhearth.securevoipclient {
    namespace client {
      namespace network {
        class com.blackhearth.securevoipclient.client.network.NetworkConstants {
            {static} + MAX_MESSAGE_RECEIVED : int
            - NetworkConstants()
        }
      }
    }
  }
  

  namespace com.blackhearth.securevoipclient {
    namespace client {
      namespace network {
        class com.blackhearth.securevoipclient.client.network.NetworkException {
            + NetworkException()
        }
      }
    }
  }
  

  com.blackhearth.securevoipclient.client.network.ClientListen o-- com.blackhearth.securevoipclient.client.network.DataInterpreter : dataInterpreter
  com.blackhearth.securevoipclient.client.network.DataInterpreter o-- com.blackhearth.securevoipclient.client.BasicClientData : clientData
  com.blackhearth.securevoipclient.client.network.DataInterpreter o-- com.blackhearth.securevoipclient.client.network.ClientSender : clientSender
  com.blackhearth.securevoipclient.client.network.DataInterpreter o-- com.blackhearth.securevoipclient.configuration.ContextSwapper : contextSwapper
  com.blackhearth.securevoipclient.client.network.DataInterpreter o-- com.blackhearth.securevoipclient.cryptographic.MicRegister : micRegister


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
